# data-contract-cite

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  kill-gate.md  landing-copy.md  pyproject.toml
.github/workflows/: test.yml
docs/: citation-map.md
examples/quickstart/: README.md  patient-events.annotations.yaml  patient-events.contract.yaml
src/data_contract_cite/: __init__.py  annotations.py  audit.py  citation_map.py  cli.py  contract.py  enricher.py  evidence.py  validator.py
src/data_contract_cite/data/: citation_map.yaml
tests/: conftest.py  test_annotations.py  test_audit.py  test_cli.py  test_contract.py  test_enricher.py  test_evidence.py  test_validator.py
tests/fixtures/: patient-events.annotations.yaml  patient-events.contract.yaml
